--- a/compose.yml
+++ b/compose.yml
@@ -7,3 +7,7 @@ services:
       - "8080:8080"
     depends_on:
       - gotenberg
+    environment:
+      - GOTENBERG_URL=http://gotenberg:3000
+      - PORT=8080
+      - SERVE_FILES=true
