api reverse proxy

--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - GOTENBERG_URL=http://gotenberg:3000
       - PORT=3000
+    ports:
+      - "3000:3000"
   nginx:
     build: .
     depends_on:
